[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adk-samples"
version = "0.1.0"
description = "A collection of sample agents built with Google Agent Development Kit (ADK)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Google LLC", email = "googleapis-packages@google.com" },
]
keywords = ["google", "adk", "agents", "ai", "generative-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.60.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/google/adk-samples"
"Bug Tracker" = "https://github.com/google/adk-samples/issues"
"Documentation" = "https://google.github.io/adk-docs/"
"Source Code" = "https://github.com/google/adk-samples"

[tool.setuptools.packages.find]
where = ["agents"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Removed --cov flags so a plain `pytest` run doesn't require pytest-cov to be installed
addopts = "-v"

[tool.coverage.run]
source = ["agents"]
omit = ["*/tests/*", "*/test_*"]
